@@ -40,3 +40,4 @@ Carp                        = 0
 Carp::Clan                  = 0
 aliased                     = 0
 Test::Requires              = 0.06
+Context::Preserve           = 0.01
