@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Wrap upgrades, downgrades, and installs in a transaction, as a failure
+         to add a version to the version table should cause a rollback
        - Allow user to specify version of schema to install
        - Added better sandboxing (stolen straight from Plack::Util) for coderefs
          to avoid accidental leakage
